--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jsmaker": "0.0.2",
     "tape": "^5.3.2"
   },
-  "author": "Anton Zemlyansky",
+  "author": "Ibrahim",
   "license": "MIT",
   "dependencies": {}
 }
