--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "moving-average-arima",
   "version": "0.2.6",
   "description": "ARIMA, SARIMA, SARIMAX and AutoARIMA models for time series analysis and forecasting",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "prepublish": "tsc --project ./",
     "clean": "rm -rf wasm && rm -rf wrapper",
